# file-context-copier

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  file-context-copier.md  pyproject.toml  test.md
src/file_context_copier/: app.py  config.py  core.py  service.py  tui.py
src/file_context_copier/formatters/: __init__.py  base.py  markdown.py  txt.py
tests/: test_app.py
