[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "file-context-copier"
version = "0.1.0"
description = "A Python CLI tool for interactively selecting project files/folders and copying their content to clipboard as markdown code blocks with proper language detection."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Lars Boes" }
]
dependencies = [
    "pathspec>=0.12.1",
    "typer>=0.16.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
# Corrected the entry point to point to 'app' instead of 'cli'
fcc = "file_context_copier.app:app"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
clipboard = [
    "pyperclip>=1.9.0",
]
service = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[tool.setuptools]
packages = ["file_context_copier"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
